@startuml Player Class

title Player Class Diagram

class PlayerDataDecorator <<Player Data>>{
    == Data == 
    .. Private ..
    - PlayerData PD
    .. Public ..
    == Methods ==
    .. Private ..
    .. Public ..
    + Get..()
    + Set..()
}

class PlayerMovement <<Player Movement>>{
    == Data ==
    .. Private Data ..
    - PlayerData PD
    - PlayerAnimationDirector PAD
    - Vector2 lateralVelocitySnapshot
    - Vector2 inputDirection
    - float verticalVelocitySnapshot
    .. Public Data ..
    + float gravity
    == Methods ==
    .. Private Methods ..
    - GetGlobalInputDirectionNorm() : Vector3 
    .. Public Methods ..
    + _Ready() : void
    + _PhysicsProcess() : void 
    + ApplyGravity() : void
    + HandleJump() : void
    + HandleBasicLateralMovement() : void
    + HandleDodgeRoll() : void
}

class CameraMovement <<Head>>{
    == Data ==
    .. Public ..
    +Camera3D FP
    +Camera3D TP
    +Camera3D ActiveCamera
    .. Private ..
    == Methods ==
    .. Public ..
    +_Ready() : void
    +_Process() : void
    +_UnhandledInput() : void
    +MouseCameraMovement() : void
    +SwitchCamera() : void
    .. Private ..
    +SetActiveCamera() : void
}

class InventoryManager <<Inventory>>{
    == Data ==
    .. Public ..
    +float maxInventoryWeight
    +float currInventoryWeight
    .. Private ..
    -ItemPickupZone ItemPickupArea
    -EquippedItem EquippedItemSlot
    -PlayerUI PlayerUI
    -InventoryUI InventoryUI
    -List MainInventory : Item
    -ulong[,] InventoryGrid
    == Methods ==
    .. Public ..
    +_Ready() : void
    +_Input() : void
    +PickupItem(): void 
    +EquipItem(): void
    +CheckCurrInventoryWeight(): void
    +AddItemToInvGrid(): bool
    +SumInventoryRegion(): ulong
    +UpdateInventoryRegion(): void
    .. Private ..
}

class PlayerAnimationDirector <<Anime>> {
    == Data ==
    .. Private ..
    .. Public ..
    == Methods ==
    .. Private ..
    .. Public ..
    + PlayRollAnimation() : void
    + CheckPlayingStatus() : bool
    + GetCurrentAnimationName() : bool
}

PlayerDataDecorator *-- PlayerMovement
PlayerDataDecorator *-- CameraMovement
PlayerDataDecorator *-- InventoryManager
PlayerMovement *-- PlayerAnimationDirector

@enduml